--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Cach&eacute; &amp; Vue.js news</title>
+    <title>F4rr3LL Demo</title>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
   </head>
   <body>
     <div class="container" id="app">
-      <h3 class="text-center">Cach&eacute; &amp; Vue.js news</h3> 
+      <h3 class="text-center">Head</h3> 
       <div class="columns medium-3" v-for="post in posts">
         <div class="card">
           <div class="card-divider">
             {{ post.title }}
+          </div>
+          <div class="card-section">
+            <img src="img/default.jpg" alt="">
           </div>
           <div class="card-section">
             <p>{{ post.body }}.</p>
@@ -21,7 +24,7 @@
         </div>
       </div>
       <hr>
-      <button class="button" style="display:block;margin:auto;" @click="getPostsViaREST">Get posts via REST</button>
+      <button class="button" style="display:block;margin:auto;" @click="getPostsViaREST">Get posts</button>
     </div>
   </body>
     <script>
@@ -36,7 +39,7 @@
         },
         methods: {
           getPostsViaREST: function() {
-            axios.get("https://jsonplaceholder.typicode.com/posts")
+            axios.get("rest.php")
               .then(response => {this.posts = response.data})
           }
         }
