--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         },
         methods: {
           getPostsViaREST: function() {
-            axios.get("rest.php")
+            axios.get("http://rest-f4rr3ll-rest.a3c1.starter-us-west-1.openshiftapps.com/rest.php/test/")
               .then(response => {this.posts = response.data})
           }
         }
