--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
       var vm = new Vue({
         el: '#app',
         data: {
-          posts: getPostsViaREST()
+          posts: function() {
+            axios.get("http://rest-f4rr3ll-rest.a3c1.starter-us-west-1.openshiftapps.com/rest.php/test/")
+              .then(response => {this.posts = response.data})
+          }
         },
         methods: {
           getPostsViaREST: function() {
