--- a/index.html
+++ b/index.html
@@ -48,18 +48,8 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="site-heading">
-              <h1>Заголовок</h1>
-              <span class="subheading">бла-бла-бла-бла-бла-бла</span>
-            </div>
-          </div>
-        </div>
-      </div>
+    <header class="masthead">
+      <canvas id="hexCanvas" width="550" height="500"></canvas>
     </header>
 
     <!-- Main Content -->
