--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
       </div>
     </nav>
 
-
-      <canvas id="hexCanvas" width="550" height="500"></canvas>
-
+    <!-- Page Header -->
+    <header class="masthead">
+      <div id="container"></div>
+    </header>
 
     <!-- Main Content -->
     <div class="container">
