--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
     </script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/1524180/Rnd.js'></script>
     <script src='https://code.createjs.com/easeljs-0.8.1.min.js'></script>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/lib/postprocessing/EffectComposer.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/lib/postprocessing/RenderPass.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/lib/postprocessing/ShaderPass.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/js/BadTVShader.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/lib/shaders/FilmShader.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/lib/shaders/CopyShader.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/lib/postprocessing/MaskPass.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/js/StaticShader.js"></script>
+<script src="https://www.airtightinteractive.com/demos/js/badtvshader/lib/shaders/RGBShiftShader.js"></script>
+
+
     <script  src="vendor/head.js"></script>
   </body>
 
