--- a/index.html
+++ b/index.html
@@ -49,18 +49,7 @@
 
     <!-- Page Header -->
     <header class="masthead">
-      <div id="container">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-              <div class="site-heading">
-                <h1>Заголовок</h1>
-                <span class="subheading">бла-бла-бла-бла-бла-бла</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="container"></div>
     </header>
 
     <!-- Main Content -->
